--- a/stylek.css
+++ b/stylek.css
@@ -1,6 +1,6 @@
 body {
-    margin: 0;
-    background: #f9f9f9;
+    margin: -10;
+    background: #c4a0a0;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -13,50 +13,50 @@ body {
 .card {
     position: relative;
     overflow: hidden;
-    width: 300px;
-    height: 400px;
+    width: 320px;
+    height: 500px;
     background: #f3efef;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0,  0, 0.1);
+    box-shadow: 0 0 5px rgba(0, 0,  0, 0.1);
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     gap: 10px;
     align-items: center;
     justify-content: center;
-    box-shadow: 0 0 10px rgba(0, 0,  0, 0.1);
+    box-shadow: 0 0 5px rgba(0, 0,  0, 0.1);
     cursor: pointer;
     transition: all 0.3s;
-    padding: 50px;
+    padding: 100px;
 }
 .card img{
     position: absolute;
-    width: 300%;
-    height: 400%;
+    width: 100%;
     object-fit: cover;
-    transition: all 0.3s;
+    transition: all 0.2s;
+    
 }
 .card p {
-    margin-top: 130px;
-    opacity: 0;
+    margin-top: 90px;
+    opacity: 10;
 }
 .info {
     bottom: 0;
     left: 0;
-    padding: 20px;
-    position: absolute;
+    padding: 10px;
+    position: relative;
     display: flex;
-    width: 200px;
-    background: #4a4b4b;
-    transition: all 0.3s;
+    width: 100px;
+    background: #2d2f2c;
+    transition:  0.3s;
 }
 .name {
     font-size: 20px;
-    font-weight: 900;
+    font-weight: 400px;
     color: #d0d6e0;
 }
 .role {
     font-size: 20px;
-    font-weight: 800;
+    font-weight: 800px;
     color: #912020;
 }
 .card:hover image{
@@ -64,21 +64,22 @@ body {
     left: 20px;
     height: 100px;
     width: 100px;
-    border-radius: 50%;
+    border-radius: 10%;
 }
 .card:hover .info {
-    left: 50%;
-    top: 30px;
+    left: 100%;
+    top: 100px;
     height: 50px;
     color: black;
 }
 .card:hover p {
-    animation: fadeUp 0.5s forwards;
+    animation: fadeUp 0.25s forwards;
+    color:rgb(104, 4, 6);
 }
 @keyframes fadeUp {
     from{
-        opacity: 0;
-        transform: translateY(200px);
+        opacity: 10;
+        transform: translateY(20px);
     }
     to{
         opacity: 1;
